chore: added run instructions in README